# libdrm

./: Android.common.mk  Android.mk  Makefile.am
amdgpu/: Android.mk  Makefile.am  amdgpu-symbol-check  libdrm_amdgpu.pc.in  meson.build
etnaviv/: Android.mk  Makefile.am  etnaviv-symbol-check  libdrm_etnaviv.pc.in  meson.build
freedreno/: Android.mk  Makefile.am  freedreno-symbol-check  libdrm_freedreno.pc.in  meson.build
instruction/: Android.common.mk  Android.mk
intel/: Android.mk  Makefile.am  libdrm_intel.pc.in  meson.build
libkms/: Android.mk  Makefile.am  kms-symbol-check  libkms.pc.in  meson.build
nouveau/: Android.mk  Makefile.am  libdrm_nouveau.pc.in  meson.build  nouveau-symbol-check
omap/: Android.mk
radeon/: Android.mk  Makefile.am  libdrm_radeon.pc.in  meson.build  radeon-symbol-check
tegra/: Makefile.am  libdrm_tegra.pc.in  meson.build  tegra-symbol-check
tests/modetest/: Android.mk
tests/proptest/: Android.mk
tests/util/: Android.mk
